@@ -2,6 +2,7 @@ Maintainer:
 Laurent Sansonetti <lsansonett@apple.com>
 
 Contributors:
+Aaron Patterson <aaron.patterson@gmail.com>
 James MacAulay <jmacaulay@gmail.com>
 Michael Pruett <michael@68k.org>
 Sebastian Delmont <sd@notso.net>
